--- a/index.html
+++ b/index.html
@@ -18,47 +18,50 @@
 </head>
 <body>
 
-  <div class="panel">
-    <a class="logo" href="" >
-      <img src="images/logo.svg" alt="Fylo logo">
-    </a>
+  <div class="container">
+    <div class="panel">
+      <a class="logo" href="" >
+        <img src="images/logo.svg" alt="Fylo logo">
+      </a>
 
-    <div class="tools">
-      <div class="tool document-button ">
-        <img src="images/icon-document.svg" alt="document icon">
+      <div class="tools">
+        <div class="tool document-button ">
+          <img src="images/icon-document.svg" alt="document icon">
+        </div>
+        <div class="tool folder-button ">
+          <img src="images/icon-folder.svg" alt="folder icon">
+        </div>
+        <div class="tool upload-button ">
+          <img src="images/icon-upload.svg" alt="upload icon">
+        </div>
       </div>
-      <div class="tool folder-button ">
-        <img src="images/icon-folder.svg" alt="folder icon">
+    </div>
+
+    <div class="storage">
+      <p>You’ve used <b  id="gb-used">815 GB</b> of your storage</p>
+      <div class="storage-bar">
+        <div class="used-storage">
+        </div>
       </div>
-      <div class="tool upload-button ">
-        <img src="images/icon-upload.svg" alt="upload icon">
+      <div class="storage-indicators">
+        <p><b>0 GB</b></p>
+        <p><b id="available storage">1000 GB</b></p>
+      </div>
+      <div class="storage-left">
+        <div class="globe">
+          <h2>185</h2>
+          <p>GB Left</p>
+        </div>
+        <div class="triangle">
+        </div>
       </div>
     </div>
   </div>
 
-  <div class="storage">
-    <p>You’ve used <b  id="gb-used">815 GB</b> of your storage</p>
-    <div class="storage-bar">
-      <div class="used-storage">
-      </div>
-    </div>
-    <div class="storage-indicators">
-      <p><b>0 GB</b></p>
-      <p><b id="available storage">1000 GB</b></p>
-    </div>
-    <div class="storage-left">
-      <div class="globe">
-        <h2>185</h2>
-        <p>GB Left</p>
-      </div>
-      <div class="triangle">
-      </div>
-    </div>
-  </div>
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
