--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
         <p><b>0 GB</b></p>
         <p><b id="available storage">1000 GB</b></p>
       </div>
-      <div class="storage-left">
+      <div class="left-memory">
         <div class="globe">
           <h2>185</h2>
           <p>GB Left</p>
-        </div>
-        <div class="triangle">
         </div>
       </div>
     </div>
