--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </div>
 
-
+  <script src="./js/script.js"></script>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
