--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
       </div>
 
       <div class="storage">
-        <p>You’ve used <b  id="gb-used">815 GB</b> of your storage</p>
+        <p>You’ve used <b  id="used-memory"></b> of your storage</p>
         <div class="storage-bar">
-          <div class="used-storage">
+          <div class="used-storage" id="used-memory-bar">
           </div>
         </div>
         <div class="storage-indicators">
           <p><b>0 GB</b></p>
-          <p><b id="available storage">1000 GB</b></p>
+          <p><b id="total-memory"></b></p>
         </div>
         <div class="left-memory">
           <div class="globe">
-            <h2>185</h2>
+            <h2 id="available-memory"></h2>
             <p>GB Left</p>
           </div>
         </div>
